Bunch of new updates to dropviewer, to be more quality of life & easier to navigate through